<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/logged_in"
            android:textColor="@color/lbl_name"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/lbl_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/infotext"
            android:textColor="@color/lbl_name"/>


        <Button
            android:id="@+id/btnShowValues"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/btn_logout_bg"
            android:text="@string/btn_show_values"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <Button
            android:id="@+id/btnSendValues"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/btn_logout_bg"
            android:text="@string/btn_send_values"
            android:textColor="@color/white"
            android:textSize="15dp" />


        <Button
            android:id="@+id/btnLogout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/btn_logout_bg"
            android:text="@string/btn_logout"
            android:textColor="@color/white"
            android:textSize="15dp" />


        <ListView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/list_view_locations"
            android:layout_marginTop="20dp">
        </ListView>


    </LinearLayout>

</RelativeLayout>